title and description design adjusted

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@ body {
     font-size: 18px; /* Larger text size for better readability */
 }
 
+div {
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
 fieldset {
     display: block;
     margin-inline-start: 2px;
@@ -30,8 +36,8 @@ fieldset {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Amithen', 
-    color: #d3d3d3; /* Light gray color for titles */
-    margin-bottom: 20px; /* Added space below titles for better structure */
+    color: #d3d3d3; 
+    margin-bottom: 20px;
 }
 
 input, select, textarea, button {
